javascriptを使ってみる

--- a/SampleWeb/src/main/resources/templates/greatFortune.html
+++ b/SampleWeb/src/main/resources/templates/greatFortune.html
@@ -9,6 +9,17 @@
 <title>占い</title>
 </head>
 <body>
+	<div>
+		ここはdivタグになります。背景色（黄色）はdemo.cssから、
+		文字色（赤色）はdemo2.cssから取得しています。
+	</div>
+	<br/>
 	<h1>あなたの運勢は...大吉です！</h1>
+	<br/>
+	下記ボタンを押下した際のダイアログは、demo.jsから取得しています。<br/>
+	<input type="button" value="JavaScript呼出_demo" onclick="demoTest();" />
+	<br/>
+	下記ボタンを押下した際のダイアログは、demo2.jsから取得しています。<br/>
+	<input type="button" value="JacaScript呼出_demo2" onclick="demoTest2();" />
 </body>
 </html>
