--- a/SampleWeb/src/main/resources/templates/greatFortune.html
+++ b/SampleWeb/src/main/resources/templates/greatFortune.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link th:href="@{/demo.css}" rel="stylesheet" type="text/css" />
-<link th;href="@{/css/demo2.css}" rel="stylesheet" type="text/css" />
+<link th:href="@{/css/demo2.css}" rel="stylesheet" type="text/css" />
 <script type="text/javascript" th:src="@{/demo.js}" ></script>
 <script type="text/javascript" th:src="@{/js/demo2.js}"></script>
 <title>占い</title>
