--- a/SampleWeb/src/main/resources/templates/Application.html
+++ b/SampleWeb/src/main/resources/templates/Application.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="ja" xmlns:th="http:/www.thymeleaf.org">
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
@@ -6,15 +7,14 @@
 <meta name="description" content="書籍「動くWebデザインアイディア帳」のサンプルサイトです">
 <meta name="viewport" content="width=devise-width,initial-scale=1.0">
 <link rel="stylesheet" type="text/css" th:href="@{/css/Application.css" />
-<link rel="stylesheet" type="text/css" href="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/reset.css">
-<link rel="stylesheet" type="text/css" href="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/5-2-4/css/5-2-4.css">
+<script src="webjars/jquery/3.5.1/jquery.min.js"></script>
+<link rel="stylesheet" href="webjars/bootstrap/4.6.0/css/bootstrap.min.css" />
+<script src="webjars/bootstrap/4.6.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="openbtn4"><span></span><span></span><span></span></div>
     <p class="lead">5-2-4<br>MENUがCLOSEに</p>
 
 <script type="text/javascript" th:src="{/js/Application.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="  crossorigin="anonymous"></script>
-<script src="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/5-2-4/js/5-2-4.js"></script>
 </body>
 </html>
