--- a/SampleWeb/src/main/resources/templates/Application.html
+++ b/SampleWeb/src/main/resources/templates/Application.html
@@ -6,7 +6,8 @@
 <title>practice</title>
 <meta name="description" content="書籍「動くWebデザインアイディア帳」のサンプルサイトです">
 <meta name="viewport" content="width=devise-width,initial-scale=1.0">
-<link rel="stylesheet" type="text/css" th:href="@{/css/Application.css" />
+<link rel="stylesheet" type="text/css" th:href="@{/css/application.css" />
+<script type="text/javascript" th:src="{/js/application.js"></script>
 <script src="webjars/jquery/3.5.1/jquery.min.js"></script>
 <link rel="stylesheet" href="webjars/bootstrap/4.6.0/css/bootstrap.min.css" />
 <script src="webjars/bootstrap/4.6.0/js/bootstrap.min.js"></script>
@@ -14,7 +15,5 @@
 <body>
 	<div class="openbtn4"><span></span><span></span><span></span></div>
     <p class="lead">5-2-4<br>MENUがCLOSEに</p>
-
-<script type="text/javascript" th:src="{/js/Application.js"></script>
 </body>
 </html>
