--- a/SampleWeb/src/main/resources/templates/Application.html
+++ b/SampleWeb/src/main/resources/templates/Application.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http:/www.thymeleaf.org">
-<html lang="ja">
-<head>
-<meta charset="UTF-8">
-<title>practice</title>
-<meta name="description" content="書籍「動くWebデザインアイディア帳」のサンプルサイトです">
-<meta name="viewport" content="width=devise-width,initial-scale=1.0">
-<link rel="stylesheet" type="text/css" th:href="@{/css/application.css" />
-<script type="text/javascript" th:src="{/js/application.js"></script>
-<script src="webjars/jquery/3.5.1/jquery.min.js"></script>
-<link rel="stylesheet" href="webjars/bootstrap/4.6.0/css/bootstrap.min.css" />
-<script src="webjars/bootstrap/4.6.0/js/bootstrap.min.js"></script>
-</head>
-<body>
-	<div class="openbtn4"><span></span><span></span><span></span></div>
-    <p class="lead">5-2-4<br>MENUがCLOSEに</p>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=devise-width,initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" th:href="@{/css/application.css}" />
+		<script type="text/javascript" th:src="@{/js/application.js}"></script>
+		<script th:src="@{webjars/jquery/3.5.1/jquery.min.js}"></script>
+		<link rel="stylesheet" th:href="@{webjars/bootstrap/4.6.0/css/bootstrap.min.css}" />
+		<script th:src="@{webjars/bootstrap/4.6.0/js/bootstrap.min.js}"></script>
+		<title>practice</title>
+	</head>
+	<body>
+		<div class="openbtn4"><span></span><span></span><span></span></div>
+	    <p class="lead">5-2-4<br>MENUがCLOSEに</p>
+	</body>
 </html>
