--- a/SampleWeb/src/main/resources/templates/Application.html
+++ b/SampleWeb/src/main/resources/templates/Application.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=devise-width,initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/reset.css">
+		<link rel="stylesheet" type="text/css" href="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/5-2-4/css/5-2-4.css">
 		<link rel="stylesheet" type="text/css" th:href="@{/css/application.css}" />
-		<script type="text/javascript" th:src="@{/js/application.js}"></script>
 		<script th:src="@{webjars/jquery/3.5.1/jquery.min.js}"></script>
 		<link rel="stylesheet" th:href="@{webjars/bootstrap/4.6.0/css/bootstrap.min.css}" />
 		<script th:src="@{webjars/bootstrap/4.6.0/js/bootstrap.min.js}"></script>
@@ -12,6 +13,9 @@
 	</head>
 	<body>
 		<div class="openbtn4"><span></span><span></span><span></span></div>
-	    <p class="lead">5-2-4<br>MENUがCLOSEに</p>
+    	<p class="lead">5-2-4<br>MENUがCLOSEに</p>
+
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="  crossorigin="anonymous"></script>
+		<script type="text/javascript" th:src="@{/js/application.js}"></script>
 	</body>
 </html>
