--- a/SampleWeb/src/main/resources/templates/Application.html
+++ b/SampleWeb/src/main/resources/templates/Application.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/reset.css">
 		<link rel="stylesheet" type="text/css" href="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/5-2-4/css/5-2-4.css">
 		<link rel="stylesheet" type="text/css" th:href="@{/css/application.css}" />
+		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+		<link rel="stylesheet" type="text/css" th:href="@{/css/slide.css}" />
 		<script th:src="@{webjars/jquery/3.5.1/jquery.min.js}"></script>
 		<link rel="stylesheet" th:href="@{webjars/bootstrap/4.6.0/css/bootstrap.min.css}" />
 		<script th:src="@{webjars/bootstrap/4.6.0/js/bootstrap.min.js}"></script>
@@ -14,8 +16,22 @@
 	<body>
 		<div class="openbtn4"><span></span><span></span><span></span></div>
     	<p class="lead">5-2-4<br>MENUがCLOSEに</p>
+    	
+    	<h2>複数画像を並列に見せる</h2>
+
+		<ul class="slider">
+		  <li><img src="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/6-1-6/img/img_01.jpg" alt=""></li>
+		  <li><img src="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/6-1-6/img/img_02.jpg" alt=""></li>
+		  <li><img src="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/6-1-6/img/img_03.jpg" alt=""></li>
+		  <li><img src="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/6-1-6/img/img_04.jpg" alt=""></li>
+		  <li><img src="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/6-1-6/img/img_05.jpg" alt=""></li>
+		  <li><img src="https://coco-factory.jp/ugokuweb/wp-content/themes/ugokuweb/data/6-1-6/img/img_06.jpg" alt=""></li>
+		<!--/slider--></ul>
+		<p>使用したライブラリ：<a href="https://kenwheeler.github.io/slick/" target="_blank">https://kenwheeler.github.io/slick/</a></p>
 
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="  crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 		<script type="text/javascript" th:src="@{/js/application.js}"></script>
+		<script type="text/javascript" th:src="@{/js/slide.js}"></script>
 	</body>
 </html>
