--- a/SampleWeb/src/main/resources/templates/Index.html
+++ b/SampleWeb/src/main/resources/templates/Index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-	<h1>どろがめの自己紹介ページ</h1>
+	<h1>いまいの自己紹介ページ</h1>
     <img src="img/no-image.jpg" alt="">
     <h2>プロフィール</h2>
     <p>
