--- a/SampleWeb/src/main/resources/templates/Index.html
+++ b/SampleWeb/src/main/resources/templates/Index.html
@@ -2,13 +2,14 @@
 <html lang="ja" xmlns:th="http:/www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>ようこそ</title>
+<meta name="viewport" content="width=devise-width,initial-scale=1.0">
 <meta name="description" content="今井のSpringboot練習">
-
+<link rel="stylesheet" type="text/css" href="/css/index.css" />
+<title>ようこそ</title>
 </head>
 <body>
 	<h1>いまいの自己紹介ページ</h1>
-    <img src="img/no-image.jpg" alt="">
+    <img class="profile" src="img/no-image.jpg" alt="">
     <h2>プロフィール</h2>
     <p>
         出身：京都府<br>
