--- a/SampleWeb/src/main/resources/templates/Application.html
+++ b/SampleWeb/src/main/resources/templates/Application.html
@@ -14,7 +14,7 @@
 		<title>practice</title>
 	</head>
 	<body>
-		<div class="openbtn4"><span></span><span></span><span></span></div>
+		<div class="openbtn4"><span>勝己</span><span>出久</span><span>轟</span></div>
     	<p class="lead">5-2-4<br>MENUがCLOSEに</p>
     	
     	<h2>複数画像を並列に見せる</h2>
