--- a/SampleWeb/src/main/resources/static/css/application.css
+++ b/SampleWeb/src/main/resources/static/css/application.css
@@ -95,3 +95,33 @@ a{
   width:200px;  
   padding: 30px;
 }
+
+/*----------------------------
+* メニュー本体
+*----------------------------*/
+.menu{
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #d54884;
+}
+
+.menu__item{
+  width: 100%;
+  height: auto;
+  padding: .5em 1em;
+  text-align: center;
+  color: #fff;
+  box-sizing: border-box;
+}
+
+.openbtn4.active{
+  transform: translateX(0);
+}
