--- a/SampleWeb/src/main/resources/templates/Application.html
+++ b/SampleWeb/src/main/resources/templates/Application.html
@@ -14,12 +14,16 @@
 		<title>practice</title>
 	</head>
 	<body>
-		<div class="openbtn4"><span></span><span></span><span></span>
-			<div class="menu__item">TOP</div>
-     		<div class="menu__item">ABOUT</div>
-      		<div class="menu__item">BLOG</div>
-      		<div class="menu__item">CONTACT</div>
-		</div>
+		<button type="button" class="openbtn4">
+      <i class="fa fa-bars" aria-hidden="true"></i>
+    </button>
+    <div class="menu">
+      <div class="menu__item">TOP</div>
+      <div class="menu__item">ABOUT</div>
+      <div class="menu__item">BLOG</div>
+      <div class="menu__item">CONTACT</div>
+    </div>
+
     	<p class="lead">5-2-4<br>MENUがCLOSEに</p>
     	
     	<h2>複数画像を並列に見せる</h2>
