--- a/SampleWeb/src/main/resources/templates/Application.html
+++ b/SampleWeb/src/main/resources/templates/Application.html
@@ -15,14 +15,17 @@
 	</head>
 	<body>
 		<button type="button" class="openbtn4">
-      <i class="fa fa-bars" aria-hidden="true"></i>
-    </button>
-    <div class="menu">
-      <div class="menu__item">TOP</div>
-      <div class="menu__item">ABOUT</div>
-      <div class="menu__item">BLOG</div>
-      <div class="menu__item">CONTACT</div>
-    </div>
+			<span></span>
+			<span></span>
+			<span></span>
+      		<i class="fa fa-bars" aria-hidden="true"></i>
+    	</button>
+    	<div class="menu">
+      		<div class="menu__item">TOP</div>
+      		<div class="menu__item">ABOUT</div>
+      		<div class="menu__item">BLOG</div>
+      		<div class="menu__item">CONTACT</div>
+    	</div>
 
     	<p class="lead">5-2-4<br>MENUがCLOSEに</p>
     	
@@ -38,7 +41,7 @@
 		<!--/slider--></ul>
 		<p>使用したライブラリ：<a href="https://kenwheeler.github.io/slick/" target="_blank">https://kenwheeler.github.io/slick/</a></p>
 
-		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="  crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 		<script type="text/javascript" th:src="@{/js/application.js}"></script>
 		<script type="text/javascript" th:src="@{/js/slide.js}"></script>
