--- a/SampleWeb/src/main/resources/static/css/application.css
+++ b/SampleWeb/src/main/resources/static/css/application.css
@@ -51,10 +51,10 @@
 /*activeクラスが付与されると線が回転して×になり、Menu⇒Closeに変更*/
 
 .openbtn4.active span:nth-of-type(1) {
-    top: 14px;
-    left: 18px;
-    transform: translateY(6px) rotate(-45deg);
-    width: 30%;
+	top: 14px;
+	left: 18px;
+	transform: translateY(6px) rotate(-45deg);
+	width: 30%;
 }
 
 .openbtn4.active span:nth-of-type(2) {
@@ -123,5 +123,14 @@ a{
 }
 
 .openbtn4.active{
+  transform: translateX(0);
+}
+
+.menu{
+  transform: translateX(100vw);
+  transition: all .3s linear;
+}
+
+.menu.is-active{
   transform: translateX(0);
 }
